Fix misc typings, RPC logic, OpenAPI generation etc.
This bumps the Next.js version to 14 and
adds various typing improvements, OpenAPI
generation, RPC and docs improvements for
client implementation.
