# apps/example/src/pages/api/v1/rpc.ts
@@ -1,0 +1,13 @@
+import { createTodo, deleteTodo, getTodoById, getTodos } from 'actions';
+import { rpcApiRoute } from 'next-rest-framework';
+
+const handler = rpcApiRoute({
+  getTodos,
+  getTodoById,
+  createTodo,
+  deleteTodo
+});
+
+export type RpcClient = typeof handler.client;
+
+export default handler;
